# lennard-jones-live-simulator

./: CMakeLists.txt  README.md  installer.nsi  ljsim.pro  ljsim.rc  package-windows.sh  resources.qrc
.github/workflows/: ci.yml  windows.yml
assets/configuration/: settings.json
assets/shaders/: phong.fs
packaging/: package.py  package.sh
src/: config.h  ljsimapp.cpp  ljsimapp.h  main.cpp
src/data/: atom.cpp  atom.h  atom_settings.cpp  atom_settings.h  bond.cpp  bond.h  fragment.cpp  fragment.h  matrixmath.h  model.cpp  model.h  model_loader.cpp  model_loader.h  structure.cpp  structure.h  structure_loader.cpp  structure_loader.h  structure_operator.cpp  structure_operator.h  structure_saver.cpp  structure_saver.h
src/gui/: anaglyph_widget.cpp  anaglyph_widget.h  logwindow.cpp  logwindow.h  mainwindow.cpp  mainwindow.h  scene.cpp  scene.h  shader_program.cpp  shader_program.h  shader_program_manager.cpp  shader_program_manager.h  shader_program_types.h  structure_renderer.cpp  structure_renderer.h  user_action.cpp  user_action.h
src/simulator/: dialognewsimulation.cpp  dialognewsimulation.h  graphwidget.cpp  graphwidget.h  lennardjonesparameters.cpp  lennardjonesparameters.h  lennardjonessimulation.cpp  lennardjonessimulation.h  threadintegrate.cpp  threadintegrate.h
